<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jeffreylmiller.soundzzz.EditSoundScheduleActivity">

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/edit_sound_schedule_activity_title"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/edit_sound_schedule_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edit_sound_schedule_name"
            android:inputType="textPersonName"
            tools:text="@string/edit_sound_schedule_name" />

        <Button
            android:id="@+id/edit_sound_schedule_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_sound_schedule_time" />

        <TextView
            android:id="@+id/edit_sound_schedule_alarm_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Alarm:" />

        <SeekBar
            android:id="@+id/edit_sound_schedule_alarm_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="143dp" />

        <TextView
            android:id="@+id/edit_sound_schedule_music_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Music" />

        <SeekBar
            android:id="@+id/edit_sound_schedule_music_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="143dp" />

        <TextView
            android:id="@+id/edit_sound_schedule_ring_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ring" />

        <SeekBar
            android:id="@+id/edit_sound_schedule_ring_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="143dp" />

        <TextView
            android:id="@+id/edit_sound_schedule_system_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="System" />

        <SeekBar
            android:id="@+id/edit_sound_schedule_system_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="143dp" />

        <TextView
            android:id="@+id/edit_sound_schedule_voice_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Voice" />

        <SeekBar
            android:id="@+id/edit_sound_schedule_voice_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="143dp" />

        <Button
            android:id="@+id/edit_sound_schedule_ring_type_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="308dp"
            tools:text="Ring Type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="S" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="M" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="T" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="W" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="T" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="F" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="S" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
